@@ -1,3 +1,7 @@
+2011-07-13  Valek Filippov
+
+		* Initial support for CDR.
+
 2011-07-12  Valek Filippov
 
 		* Parse VSD SplineStart/Knot.
